compiler/fir/analysis-tests/testData/resolve/diagnostics/selfTypes/forEnumClass.kt
// FIR_DISABLE_LAZY_RESOLVE_CHECKS
import kotlin.Self
<!TYPE_PARAMETERS_IN_ENUM!><!SELF_TYPE_INAPPLICABLE_TARGET!>@Self<!>
enum class EnumClass {

}<!>